claims-service/claims-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: claims-service-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /claims
            backend:
              service:
                name: claims-service
                port:
                  number: 8080
